--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<nav>
 		 <ul> 
 	<li><a target="_blank" href="C:/Users/2-BACH-ACD/Desktop/Tarea%20Final/sobre%20mi.html">Sobre mí</a></li> 
-	<li><a target="_blank" href="#">Otra web</a></li> 
+	<li><a target="_blank" href="https://yaraisha.github.io/Mi-web/">Otra web</a></li> 
 	<li><a target="_blank" href="C:/Users/2-BACH-ACD/Desktop/Tarea%20Final/preguntas.html">Preguntas</a></li> 
 	</ul> 
 	</nav>
