--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 	<!-- menu de navegación por el sitio web-->
 	<nav>
 		 <ul> 
-	<li><a target="_blank" href="C:/Users/2-BACH-ACD/Desktop/Tarea%20Final/sobre%20mi.html">Sobre mí</a></li> 
+	<li><a target="_blank" href="Tarea%20Final/sobre%20mi.html">Sobre mí</a></li> 
 	<li><a target="_blank" href="https://yaraisha.github.io/Mi-web/">Otra web</a></li> 
-	<li><a target="_blank" href="C:/Users/2-BACH-ACD/Desktop/Tarea%20Final/preguntas.html">Preguntas</a></li> 
+	<li><a target="_blank" href="Tarea%20Final/preguntas.html">Preguntas</a></li> 
 	</ul> 
 	</nav>
 	
