--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<!-- etiqueta encabezado -->
 	<header>
 		<h1> El Mundo del Cine </h1>
-			<a target="_blank" href="C:/Users/2-BACH-ACD/Desktop/Tarea%20Final/index.html#URLInicio"> <img src="Imagenes/cinema.jfif" height="350px" align="center"> </a>
+			<a target="_blank" href="Tarea%20Final/index.html#URLInicio"> <img src="Imagenes/cinema.jfif" height="350px" align="center"> </a>
 	</header>
 	
 	<!-- menu de navegación por el sitio web-->
